# ledger

./: .clippy.toml  .dockerignore  .gitignore  .mise.toml  .prettierignore  .prettierrc.json  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  DESIGN.md  Dockerfile  Justfile  MANIFEST.md  OPERATIONS.md  PII.md  README.md  SECURITY.md  WHITEPAPER.md  commitlint.config.js  inferadb-ledger.example.toml  ledger.example.toml  release-please-config.json  split_apply.py
crates/consensus/: CLAUDE.md  Cargo.toml
crates/consensus/src/: action.rs  bootstrap.rs  buggify.rs  circuit_breaker.rs  clock.rs  closed_ts.rs  committed.rs  config.rs  consensus_state.rs  crypto.rs  engine.rs  error.rs  idempotency.rs  leadership.rs  lease.rs  lib.rs  message.rs  network_outbox.rs  reactor.rs  recovery.rs  rng.rs  router.rs  shard.rs  snapshot_coordinator.rs  snapshot_crypto.rs  snapshot_installer.rs  snapshot_sender.rs  snapshot_utils.rs  split.rs  state_machine.rs  timer.rs  transport.rs  types.rs  wake.rs  wal_backend.rs  zero_copy.rs
crates/consensus/src/simulation/: harness.rs  mod.rs  multi_raft.rs  network.rs
crates/consensus/src/wal/: encrypted.rs  io_uring_backend.rs  memory.rs  mod.rs  segmented.rs
crates/consensus/tests/: election.rs  encryption_roundtrip.rs  engine.rs  membership.rs  replication.rs  simulation_linearizability.rs  wal_checkpoint.rs  wal_durability.rs
crates/consensus/tests/common/: mod.rs
crates/fs/: CLAUDE.md  Cargo.toml
crates/fs-sync/: CLAUDE.md  Cargo.toml
crates/fs-sync/src/: lib.rs
crates/fs/src/: lib.rs
crates/inkwell/: Cargo.toml
crates/inkwell/src/: db.rs  error.rs  lib.rs  types.rs
crates/profile/: CLAUDE.md  Cargo.toml
crates/profile/src/: harness.rs  main.rs
crates/proto/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/proto/src/: convert.rs  lib.rs
crates/raft/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/raft/benches/: logging_bench.rs  wide_events_bench.rs
crates/raft/src/: api_version.rs  apply_command.rs  apply_pool.rs  apply_worker.rs  audit.rs  auto_recovery.rs  backup.rs  batching.rs  block_compaction.rs  btree_compaction.rs  cardinality.rs  commit_dispatcher.rs  consensus_handle.rs  consensus_transport.rs  deadline.rs  dek_rewrap.rs  dependency_health.rs  dogstatsd.rs  entry_crypto.rs  error.rs  event_writer.rs  events_gc.rs  file_lock.rs  graceful_shutdown.rs  hot_key_detector.rs  idempotency.rs  integrity_scrubber.rs  invite_maintenance.rs  leader_lease.rs  leader_transfer.rs  learner_refresh.rs  lib.rs  log_storage.rs  logging.rs  membership_queue.rs  message_outbox.rs  metrics.rs  multi_raft.rs  multi_region_server.rs  multi_shard_server.rs  (+41 more)
crates/sdk/: CLAUDE.md  Cargo.toml  README.md
crates/sdk/benches/: client_bench.rs
crates/sdk/examples/: basic_usage.rs  batch_operations.rs  streaming.rs  tls_connection.rs  verified_read.rs
crates/sdk/src/: circuit_breaker.rs  client.rs  config.rs  connection.rs  discovery.rs  error.rs  idempotency.rs  lib.rs  metrics.rs  mock.rs  proto_util.rs  region_resolver.rs  retry.rs  streaming.rs  token.rs  tracing.rs  vault_resolver.rs
crates/sdk/tests/: app_client_assertion.rs  e2e.rs  leader_hint_recovery.rs  leader_watch.rs
crates/server/: CLAUDE.md  Cargo.toml
crates/server/benches/: read_bench.rs  whitepaper_bench.rs  write_bench.rs
crates/server/src/: bootstrap.rs  cluster_id.rs  config.rs  config_reload.rs  coordinator.rs  discovery.rs  dr_scheduler.rs  lib.rs  main.rs  node_id.rs  placement.rs  shutdown.rs
crates/server/tests/: background_jobs.rs  backup_restore.rs  bootstrap_coordination.rs  bootstrap_dsot_resolution.rs  chaos_consistency.rs  check_relationship.rs  checkpoint_crash_recovery.rs  cluster_b1_helpers.rs  design_compliance.rs  election.rs  external.rs  externalized_state.rs  get_node_info.rs  integration.rs  invitation.rs  isolation.rs  leader_failover.rs  linearizable_follower_per_vault.rs  multi_region.rs  multi_shard.rs  network_simulation.rs  onboarding.rs  orphan_cleanup.rs  redirect_routing.rs  region_opt_in.rs  region_residency.rs  replication.rs  saga_orchestrator.rs  snapshot_install.rs  stress.rs  stress_integration.rs  stress_scale.rs  stress_test.rs  stress_watch.rs  telemetry_context.rs  three_tier_consensus.rs  token_lifecycle.rs  ttl_gc.rs  vault_lifecycle.rs  vaults_admin.rs  (+2 more)
crates/services/: CLAUDE.md  Cargo.toml
crates/services/src/: api_version.rs  jwt.rs  lib.rs  peer_maintenance.rs  proposal.rs  proto_compat.rs  server.rs
crates/state/: CLAUDE.md  Cargo.toml  README.md
crates/state/proptest-regressions/: state.txt
crates/state/src/: apply_pool.rs  binary_keys.rs  block_archive.rs  bucket.rs  dictionary.rs  engine.rs  entity.rs  events.rs  events_keys.rs  indexes.rs  keys.rs  lib.rs  relationship.rs  relationship_index.rs  shard.rs  shard_routing.rs  snapshot.rs  state.rs  tiered_storage.rs  time_travel.rs
crates/storage/: Cargo.toml
crates/storage/src/: block_archive.rs  bucket.rs  engine.rs  entity.rs  indexes.rs  keys.rs  lib.rs  relationship.rs  shard.rs  snapshot.rs  state.rs  tables.rs  tiered_storage.rs  time_travel.rs
crates/store/: CLAUDE.md  Cargo.toml  README.md
crates/store/benches/: btree_bench.rs  file_io_bench.rs
crates/store/src/: bloom.rs  db.rs  dirty_bitmap.rs  error.rs  integrity.rs  lib.rs  tables.rs  transaction.rs  types.rs
crates/store/tests/: crash_recovery.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: assertions.rs  config.rs  crash_injector.rs  lib.rs  strategies.rs  test_dir.rs
crates/types/: CLAUDE.md  Cargo.toml  README.md
crates/types/benches/: merkle.rs
crates/types/proptest-regressions/: merkle.txt
crates/types/src/: audit.rs  codec.rs  config.rs  email_hash.rs  error.rs  error_code.rs  events.rs  hash.rs  invitation.rs  lib.rs  merkle.rs  onboarding.rs  snowflake.rs  token.rs  types.rs  validation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_btree_keys.rs  fuzz_email_hmac.rs  fuzz_encrypted_page.rs  fuzz_pagination_token.rs  fuzz_postcard_codec.rs  fuzz_proto_convert.rs  fuzz_region_serde.rs
(+456 files in other folders)
