[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/storage",
    "crates/raft",
    "crates/server",
    "crates/inkwell",
    "crates/test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/ledger"
authors = ["InferaDB Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# gRPC
tonic = { version = "0.12", features = ["gzip", "zstd"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "tracing-log", "loosen-follower-log-revert"] }

# Crypto
sha2 = "0.10"
seahash = "4.1"
hmac = "0.12"
rs_merkle = "1.4"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"

# Compression
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
snafu = { version = "0.8", features = ["backtrace"] }
thiserror = "2.0"

# Concurrency
parking_lot = "0.12"
arc-swap = "1.7"

# Caching
lru = "0.12"
moka = { version = "0.12", features = ["sync"] }

# Utilities
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics and observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Configuration
config = "0.14"
toml = "0.8"
humantime = "2.1"

# File locking
fs2 = "0.4"

# Testing
tempfile = "3.14"
rand = "0.8"
futures = "0.3"
proptest = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# DNS resolver for SRV record discovery
hickory-resolver = "0.24"

# Object Storage (S3, GCS, Azure, local)
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
async-trait = "0.1"

# Network simulation testing
turmoil = "0.7"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
async-stream = "0.3"

# Internal crates
ledger-types = { path = "crates/types" }
ledger-storage = { path = "crates/storage" }
ledger-raft = { path = "crates/raft" }
inkwell = { path = "crates/inkwell" }
ledger-test-utils = { path = "crates/test-utils" }

# Hashing (for inkwell)
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh3"] }
byteorder = "1.5"
memmap2 = "0.9"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
