[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/store",
    "crates/state",
    "crates/raft",
    "crates/server",
    "crates/sdk",
    "crates/test-utils",
]

[workspace.package]
version = "0.1.0-pre.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/ledger"
authors = ["InferaDB Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# gRPC
# tls-ring: use ring crypto instead of slow-to-compile aws-lc
# tls-native-roots: load system CA certificates (needed by SDK)
tonic = { version = "0.14", features = ["gzip", "zstd", "tls-ring", "tls-native-roots"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }

# Raft consensus
openraft = { version = "0.9", features = ["serde", "tracing-log", "loosen-follower-log-revert"] }
validit = "0.2"

# Crypto
sha2 = "0.10"
seahash = "4.1"
hmac = "0.12"
rs_merkle = "1.4"
subtle = "2.6"
base64 = "0.22"

# Compression
zstd = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

# Error handling
snafu = { version = "0.8", features = ["backtrace"] }

# Concurrency
parking_lot = "0.12"
arc-swap = "1.7"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Builder pattern
bon = "3.8"

# Utilities
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics and observability
metrics = "0.24"
# Disable push-gateway (default) to avoid hyper-rustls/aws-lc-sys dependency
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# Configuration
config = "0.14"
toml = "0.8"
humantime = "2.1"

# File locking
fs2 = "0.4"

# Testing
tempfile = "3.14"
rand = "0.8"
futures = "0.3"
proptest = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# DNS resolver for A record discovery
hickory-resolver = "0.24"

# Object Storage (S3, GCS, Azure, local)
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }

async-trait = "0.1"

# Network simulation testing
turmoil = "0.7"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
async-stream = "0.3"

# Internal crates (version + path for crates.io publishing)
inferadb-ledger-types = { version = "0.1.0-pre.1", path = "crates/types" }
inferadb-ledger-store = { version = "0.1.0-pre.1", path = "crates/store" }
inferadb-ledger-state = { version = "0.1.0-pre.1", path = "crates/state" }
inferadb-ledger-raft = { version = "0.1.0-pre.1", path = "crates/raft" }
inferadb-ledger-server = { version = "0.1.0-pre.1", path = "crates/server" }
inferadb-ledger-sdk = { version = "0.1.0-pre.1", path = "crates/sdk" }
inferadb-ledger-test-utils = { version = "0.1.0-pre.1", path = "crates/test-utils" }

# Hashing (for inferadb-ledger-store)
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh3"] }
byteorder = "1.5"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
