[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/store",
    "crates/state",
    "crates/proto",
    "crates/raft",
    "crates/services",
    "crates/server",
    "crates/sdk",
    "crates/test-utils",
    "crates/consensus",
    "crates/profile",
    "crates/fs-sync",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/ledger"
authors = ["InferaDB Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# gRPC
# tls-ring: use ring crypto instead of slow-to-compile aws-lc
# tls-native-roots: load system CA certificates (needed by SDK)
tonic = { version = "0.14", features = ["gzip", "zstd", "tls-ring", "tls-native-roots"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }

# Crypto
sha1 = "0.11"
sha2 = "0.11"
seahash = "4"
blake3 = "1"
hmac = "0.13"
rs_merkle = "1"
subtle = "2"
base64 = "0.22"
aes-gcm = "0.10"
aes-kw = "0.3"
zeroize = { version = "1", features = ["derive"] }
bcrypt = "0.19"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core", "zeroize"] }
# JWT: rust_crypto backend provides CryptoProvider auto-registration; ed25519-dalek for EdDSA
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Compression
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }
schemars = "1"

# Error handling
snafu = "0.9"
thiserror = "2"

# Parallelism
rayon = "1.10"

# Concurrency
parking_lot = "0.12"
arc-swap = "1"
im = { version = "15", features = ["serde"] }
dashmap = "6"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Builder pattern
bon = "3"

# Utilities
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics and observability
metrics = "0.24"
# Disable push-gateway (default) to avoid hyper-rustls/aws-lc-sys dependency
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
metrics-exporter-dogstatsd = "0.9"

# OpenTelemetry (OTLP export for canonical log lines)
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# Configuration
clap = { version = "4", features = ["derive", "env"] }
humantime = "2"
humantime-serde = "1"

# File locking
fs2 = "0.4"

# Low-level syscall FFI — used ONLY by `inferadb-ledger-fs-sync` to wrap
# macOS `fcntl(F_BARRIERFSYNC)`. No other crate should depend on libc.
libc = "0.2"

# Testing
tempfile = "3"
rand = "0.10"
futures = "0.3"
proptest = "1"
serial_test = "3"


# DNS resolver for A record discovery
hickory-resolver = "0.25"

# Object Storage (S3, GCS, Azure, local)
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }

async-trait = "0.1"

# Network simulation testing
turmoil = "0.7"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
async-stream = "0.3"

# Internal crates
# - `version + path` — crate is published to crates.io (consumed by external SDK users).
# - `path` only     — internal-only crate, not published.
inferadb-ledger-types = { version = "0.1.0", path = "crates/types" }
inferadb-ledger-proto = { version = "0.1.0", path = "crates/proto" }
inferadb-ledger-sdk = { version = "0.1.0", path = "crates/sdk" }
inferadb-ledger-store = { path = "crates/store" }
inferadb-ledger-state = { path = "crates/state" }
inferadb-ledger-raft = { path = "crates/raft" }
inferadb-ledger-consensus = { path = "crates/consensus" }
inferadb-ledger-services = { path = "crates/services" }
inferadb-ledger-server = { path = "crates/server" }
inferadb-ledger-test-utils = { path = "crates/test-utils" }
inferadb-ledger-profile = { path = "crates/profile" }
inferadb-ledger-fs-sync = { path = "crates/fs-sync" }

# Hashing (for inferadb-ledger-store)
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh3"] }
byteorder = "1"
crc32fast = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true
strip = false
