[package]
name = "inferadb-ledger-consensus"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aes-gcm = { workspace = true }
crc32fast = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rkyv = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true, features = ["rc"] }
snafu = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tracing = { workspace = true }

[features]
default = []
io-uring = []

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
