[package]
name = "inferadb-ledger-fs"
description = "Low-level file-system primitives for InferaDB Ledger (barrier fsync, page-cache eviction). This is the only crate in the workspace that is permitted to use unsafe code."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["filesystem", "durability", "fsync", "barrier"]
categories = ["filesystem"]

[dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true

# This crate overrides the workspace-wide `unsafe_code = "deny"` because it
# wraps `fcntl(F_BARRIERFSYNC)` on Apple platforms, which no audited safe-
# syscall crate (rustix, nix) currently exposes. All unsafe blocks are
# isolated in this crate and documented with SAFETY comments. See
# `crates/fs/CLAUDE.md` for the escalation rationale.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
