[package]
name = "inferadb-ledger-profile"
description = "Profiling workload driver — SDK-consumer CLI that drives repeatable load against a running ledger node."
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "inferadb-ledger-profile"
path = "src/main.rs"

[dependencies]
inferadb-ledger-sdk.workspace = true
inferadb-ledger-types.workspace = true

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
clap = { workspace = true, features = ["derive"] }
snafu.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
