[package]
name = "inferadb-ledger-raft"
description = "Raft consensus and gRPC services for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-raft"
readme = "README.md"
keywords = ["raft", "consensus", "distributed", "grpc", "ledger"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Internal
inferadb-ledger-types.workspace = true
inferadb-ledger-proto.workspace = true
inferadb-ledger-state.workspace = true
inferadb-ledger-store.workspace = true

# Raft consensus
openraft.workspace = true

# gRPC
tonic.workspace = true
tonic-prost.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true
tower.workspace = true

# Async runtime
tokio.workspace = true

# Concurrency
parking_lot.workspace = true
moka.workspace = true
arc-swap.workspace = true
dashmap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true

# Error handling
snafu.workspace = true

# Builder pattern
bon.workspace = true

# Crypto
sha2.workspace = true
hmac.workspace = true
seahash.workspace = true
base64.workspace = true
rand.workspace = true

# Utilities
bytes.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true
fs2.workspace = true
tempfile.workspace = true

# Metrics
metrics.workspace = true

# OpenTelemetry (OTLP export)
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

# Compression
async-compression.workspace = true
zstd.workspace = true

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
inferadb-ledger-test-utils.workspace = true
tracing-subscriber.workspace = true
proptest.workspace = true

[lints]
workspace = true
