[package]
name = "inferadb-ledger-sdk"
description = "Production-grade Rust SDK for InferaDB Ledger service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-sdk"
readme = "README.md"
keywords = ["ledger", "blockchain", "authorization", "sdk", "grpc"]
categories = ["api-bindings", "authentication"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }

# Retry with backoff
backon = "1.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Builder pattern
bon = { workspace = true }

# DNS resolution
hickory-resolver = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Metrics facade
metrics = { workspace = true }

# Utilities
tracing = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
prost-types = { workspace = true }

# Internal crates
inferadb-ledger-types = { workspace = true }
inferadb-ledger-proto = { workspace = true }
inferadb-ledger-raft = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"
inferadb-ledger-server = { workspace = true }
inferadb-ledger-test-utils = { workspace = true }
openraft = { workspace = true }
serial_test = "3.2"

[lints]
workspace = true
