[package]
name = "ledger-server"
description = "Server binary for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "ledger_server"
path = "src/lib.rs"

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
# Internal
ledger-types.workspace = true
ledger-state.workspace = true
ledger-raft.workspace = true

# Raft consensus
openraft.workspace = true

# Storage
ledger-db.workspace = true

# Async runtime
tokio.workspace = true

# gRPC
tonic.workspace = true

# Configuration
config.workspace = true
toml.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Concurrency
parking_lot.workspace = true

# Error handling
snafu.workspace = true

# DNS SRV discovery
hickory-resolver.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
rand.workspace = true
ledger-test-utils.workspace = true
futures.workspace = true
criterion.workspace = true
serial_test = "3.2"

# Network simulation testing
turmoil.workspace = true
hyper.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
tower.workspace = true

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "read_bench"
harness = false

[lints]
workspace = true
