[package]
name = "inferadb-ledger-server"
description = "Server binary for InferaDB Ledger"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "inferadb_ledger_server"
path = "src/lib.rs"

[[bin]]
name = "inferadb-ledger"
path = "src/main.rs"

[dependencies]
# Internal
inferadb-ledger-types.workspace = true
inferadb-ledger-proto.workspace = true
inferadb-ledger-state.workspace = true
inferadb-ledger-raft.workspace = true

# Raft consensus
openraft.workspace = true

# Storage
inferadb-ledger-store.workspace = true

# Async runtime
tokio.workspace = true

# gRPC
tonic.workspace = true

# Configuration
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
schemars.workspace = true

# Concurrency
parking_lot.workspace = true

# Error handling
snafu.workspace = true

# DNS discovery
hickory-resolver.workspace = true

# Random number generation
rand.workspace = true

# Builder pattern
bon.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
rand.workspace = true
inferadb-ledger-test-utils.workspace = true
futures.workspace = true
criterion.workspace = true
serial_test = "3.4"
uuid.workspace = true

# Network simulation testing
turmoil.workspace = true
hyper.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
tower.workspace = true

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "read_bench"
harness = false

[[bench]]
name = "whitepaper_bench"
harness = false

[lints]
workspace = true
