[package]
name = "inferadb-ledger-server"
description = "Server binary for InferaDB Ledger"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
autotests = false

[lib]
name = "inferadb_ledger_server"
path = "src/lib.rs"

[[bin]]
name = "inferadb-ledger"
path = "src/main.rs"

[dependencies]
# Internal
inferadb-ledger-types.workspace = true
inferadb-ledger-proto.workspace = true
inferadb-ledger-state.workspace = true
inferadb-ledger-raft.workspace = true
inferadb-ledger-services.workspace = true
inferadb-ledger-consensus = { path = "../consensus" }

# Storage
inferadb-ledger-store.workspace = true

# Async runtime
tokio = { workspace = true, features = ["io-util", "net", "signal"] }

# gRPC
tonic.workspace = true

# Configuration
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Concurrency
parking_lot.workspace = true

# Error handling
snafu.workspace = true

# Random number generation
rand.workspace = true

# Hashing
seahash.workspace = true

# Builder pattern
bon.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-stream.workspace = true
inferadb-ledger-test-utils.workspace = true
inferadb-ledger-sdk.workspace = true
futures.workspace = true
uuid.workspace = true
serial_test = { workspace = true }

# Network simulation testing
turmoil.workspace = true
hyper.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
tower.workspace = true

[[test]]
name = "integration"

[[test]]
name = "external"

[[test]]
name = "stress"

[lints]
workspace = true
