[package]
name = "inferadb-ledger-state"
description = "Domain state management for InferaDB Ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/inferadb-ledger-state"
readme = "README.md"
keywords = ["ledger", "state", "blockchain", "authorization", "storage"]
categories = ["database-implementations"]

[dependencies]
# Internal
inferadb-ledger-types.workspace = true

# Storage engine
inferadb-ledger-store.workspace = true

# Crypto (for bucket hashing)
sha2.workspace = true
seahash.workspace = true

# Compression
zstd.workspace = true

# Concurrency
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true

# Error handling
snafu.workspace = true

# Utilities
bytes.workspace = true
chrono.workspace = true
tracing.workspace = true

# Async (for snapshot operations)
tokio.workspace = true

# Temporary files (for snapshot serialization to object storage)
tempfile.workspace = true

# Object storage (S3, GCS, Azure, local)
object_store.workspace = true
async-trait.workspace = true
url = "2.5"
futures.workspace = true

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
inferadb-ledger-test-utils.workspace = true

[lints]
workspace = true
